<resources>
    <string name="app_name">FinHealth</string>
    <string name="email">Email</string>
    <string name="heslo">Heslo</string>
    <string name="welcome_text">Vitajte v aplikácii FinHealth</string>
    <string name="sign_out">Odhlásiť sa</string>
    <string name="sign_up">Nemáte účet? Registrujte sa</string>
    <string name="sign_in">Máte účet? Prihláste sa</string>
    <string name="continue_text">Aby ste mohli pokračovať, prihláste sa</string>
    <string name="meno">Meno</string>
    <string name="registrationn">Registrovať sa</string>
    <string name="login">Prihlásiť sa</string>
    <string name="priezvisko">Priezvisko</string>
    <string name="euro">€</string>
    <string name="percent">%</string>
    <string name="confirm">Potvrdiť</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
